<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingTop="10dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/image_location"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textview_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/lagitude"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textview_lagitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/longitude"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textview_longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>